parser/tests/bad/decl01-1.st
% re-declaration of identifier 'x'
%   variable

var i := 1
var i := 1
